Tue Dec  7 23:57:07 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	Start of v2.00 : too many changes to list them in detail, but:
	- Rewrote relocation code, removal of LateValue.
	- Significantly reworked the 'Code' evaluation.
	- Previously known broken test cases are now working.

Tue Nov 16 23:25:13 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/operator_relational.s: Fix the boolean tests.

Tue Nov  9 12:41:48 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* commands.c (c_fn, c_rn, c_cn): Improve error message.
	(symFlag): Change return type to bool.  Add comment.
	(c_globl,c_strong,c_keep): Tail call symFlag.
	(c_import): Fix comment.  Use Input_Match instead of inputGet.
	* decode.c (decode): Deal with empty lines.
	* asm.c (assemble): Let decode deal with empty lines.
	* macros.c (c_macro): Report file and line number of previous
	defined macro with same name.
	* output.c (writeEntry, outputAof): Cleanup.
	* m_cpu.c (lhsrhs): Cleanup.
	* aoffile.h: Make use of uint32_t instead of unsigned int.
	* whileif.c (if_skip): Early skip empty lines.
	* input.c (Input_Symbol): Unbracketed symbol name can not start
	with digit. Return NULL consistently when we can't read a symbol.
	* get.c (getTypeInternal): Renamed from getCpuRegInternal and
	generalise it with type.
	(getCpuReg, getCpuRegNoError, getFpuReg, getCopReg, getCopNum):
	Make use of getTypeInternal.
	* lex.c (lexGetId): Tune error message.

Tue Nov  9 05:01:07 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (oDecodeTable): Add IF/ELSE/ENDIF mnemonics.
	(decode): Fix END/ENDIF selection.
	* whileif.c (if_skip): Support IF/ELSE/ENDIF mnemonics.
	* regression/tests_pass/if_else.s: Added.

Sun Nov  7 16:26:09 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (symbolInit): Remove the need of a terminator.
	(symbolAdd): Don't reinitialise existing symbol.
	(symbolPrintAll): Start each symbol output at beginning of line.
